# YUVPlayer

./: .gitignore  CMakeLists.txt  HOW_TO_BUILD_APK.md  README.md  README_MOBILE.md  README_MOBILE_CN.md  REPORT.md
.github/workflows/: android.yml
android/: AndroidManifest.xml
src/: benchmark.cpp  main.cpp
src/core/: srt_parser.cpp  srt_parser.h  thread_pool.c  yuv_common.h  yuv_converter.c  yuv_converter.h  yuv_converter_sse.c  yuv_reader.c  yuv_reader.h
src/gui/: mainwindow.cpp  mainwindow.h  mobile_player.cpp  mobile_player.h  videowidget.cpp  videowidget.h
